@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.6-pl
 ====================================
+- [#3038] Fix problems with filemanager_path settings and absolute URLs in image TV values
 - [#3039] Add symlink_merge_fields setting to disable modSymLink merge behavior
 - [#3103] Alter modSession data field to store more than 64Kb
 - [#3091] Add missing specific dom ID to profile change password panel
